--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <h3>Equipment Rental</h3>
         </div>
         <div class="desc">
-          <p> </p>
+          <p> This is the best project we made </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/Touchless_controll.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
