--- a/index.html
+++ b/index.html
@@ -267,6 +267,23 @@
 
   <div class="box-container">
 
+    <div class="box tilt">
+      <img draggable="false" src="./assets/images/projects/rental-service.jpg" alt="" />
+      <div class="content">
+        <div class="tag">
+        <h3>Easy Bookings</h3>
+        </div>
+        <div class="desc">
+          <p> Easy Bookings is a rental property listing platform built using Express, MongoDB, JavaScript, and EJS. It allows
+users to list properties, book stays, leave reviews, and interact with hosts.</p>
+          <div class="btns">
+            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/saiteja859/EASYBOOKINGS.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+          </div>
+        </div>
+      </div>
+    </div> 
+
      <div class="box tilt">
       <img draggable="false" src="./assets/images/projects/ai.jpeg" alt="" />
       <div class="content">
