--- a/index.html
+++ b/index.html
@@ -274,8 +274,7 @@
         <h3>Easy Bookings</h3>
         </div>
         <div class="desc">
-          <p> Easy Bookings is a rental property listing platform built using Express, MongoDB, JavaScript, and EJS. It allows
-users to list properties, book stays, leave reviews, and interact with hosts.</p>
+          <p> Easy Bookings is a rental property listing platform built using Express, MongoDB, JavaScript, and EJS.</p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/EASYBOOKINGS.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -291,8 +290,7 @@ users to list properties, book stays, leave reviews, and interact with hosts.</p
         <h3>Volume Controller</h3>
         </div>
         <div class="desc">
-          <p> This project is an AI-based system that controls the volume of a device using hand gestures. It is built using Python,
-            leveraging computer vision library .</p>
+          <p> This project is an AI-based system that controls the volume of a device using hand gestures.</p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/Touchless_controller.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -304,13 +302,14 @@ users to list properties, book stays, leave reviews, and interact with hosts.</p
     
 
     <div class="box tilt">
-      <img draggable="false" src="./assets/images/image.png" alt="" />
+      <img draggable="false" src="./assets/images/projects/image.png" alt="" />
       <div class="content">
         <div class="tag">
         <h3>Equipment Rental</h3>
         </div>
         <div class="desc">
-          <p> This is the best project we made </p>
+          <p> An equipment rental system is a platform that facilitates the renting of equipment by connecting owners with
+renters. </p>
           <div class="btns">
             <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/Touchless_controll.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
