--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="desc">
           <p> Easy Bookings is a rental property listing platform built using Express, MongoDB, JavaScript, and EJS.</p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/saiteja859/EASYBOOKINGS.git" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/EASYBOOKINGS.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -292,7 +292,7 @@
         <div class="desc">
           <p> This project is an AI-based system that controls the volume of a device using hand gestures.</p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/saiteja859/Touchless_controller.git" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/Touchless_controller.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
@@ -311,7 +311,7 @@
           <p> An equipment rental system is a platform that facilitates the renting of equipment by connecting owners with
 renters. </p>
           <div class="btns">
-            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+            <a href="https://github.com/saiteja859/equipment-rental.git" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
             <a href="https://github.com/saiteja859/equipment-rental.git" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
           </div>
         </div>
